--- a/hacker-chat/aula-02/client/package.json
+++ b/hacker-chat/aula-02/client/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "user01": "node index.js --username marcelo --room sala01 --hostUri localhost",
-    "user02": "node index.js --username jorge --room sala01 --hostUri localhost",
-    "user03": "node index.js --username giovana --room sala01 --hostUri http://localhost:3000",
+    "user01": "node index.js --username marcelo --room sala01 --hostUri http://localhost:9898",
+    "user02": "node index.js --username jorge --room sala01 --hostUri http://localhost:9898",
+    "user03": "node index.js --username giovana --room sala01 --hostUri http://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
