--- a/hacker-chat/aula-04/client/package.json
+++ b/hacker-chat/aula-04/client/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "user01": "node index.js --username marcelo --room sala01 --hostUri http://localhost:9898",
     "user02": "node index.js --username jorge --room sala01 --hostUri http://localhost:9898",
-    "user03": "node index.js --username giovana --room sala01 --hostUri http://localhost:9898",
+    "user03": "node index.js --username karina --room sala02 --hostUri http://localhost:9898",
+    "user04": "node index.js --username ailton --room sala02 --hostUri http://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
