--- a/hacker-chat/aula-04/server/package.json
+++ b/hacker-chat/aula-04/server/package.json
@@ -9,6 +9,9 @@
     "dev": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "15"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
